hw5/_build/_log
### Starting build.
# Target: main.ml.depends, tags: { extension:ml, file:main.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules main.ml > main.ml.depends # cached
# Target: util/assert.mli.depends, tags: { extension:mli, file:util/assert.mli, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules util/assert.mli > util/assert.mli.depends # cached
# Target: util/assert.cmi, tags: { byte, compile, extension:mli, file:util/assert.mli, interf, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I util -I ll -I x86 -o util/assert.cmi util/assert.mli # cached
# Target: driver.ml.depends, tags: { extension:ml, file:driver.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules driver.ml > driver.ml.depends # cached
# Target: astlib.ml.depends, tags: { extension:ml, file:astlib.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules astlib.ml > astlib.ml.depends # cached
# Target: ast.ml.depends, tags: { extension:ml, file:ast.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules ast.ml > ast.ml.depends # cached
# Target: util/range.mli.depends, tags: { extension:mli, file:util/range.mli, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules util/range.mli > util/range.mli.depends # cached
# Target: util/range.cmi, tags: { byte, compile, extension:mli, file:util/range.mli, interf, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I util -I ll -I x86 -o util/range.cmi util/range.mli # cached
# Target: ast.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ast.cmo, file:ast.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I ll -I util -I x86 -o ast.cmo ast.ml # cached
# Target: astlib.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:astlib.cmo, file:astlib.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I ll -I util -I x86 -o astlib.cmo astlib.ml # cached
# Target: backend.ml.depends, tags: { extension:ml, file:backend.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules backend.ml > backend.ml.depends # cached
# Target: ll/ll.ml.depends, tags: { extension:ml, file:ll/ll.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules ll/ll.ml > ll/ll.ml.depends # cached
# Target: ll/ll.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ll/ll.cmo, file:ll/ll.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I ll -I util -I x86 -o ll/ll.cmo ll/ll.ml # cached
# Target: util/platform.ml.depends, tags: { extension:ml, file:util/platform.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules util/platform.ml > util/platform.ml.depends # cached
# Target: util/platform.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:util/platform.cmo, file:util/platform.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I util -I ll -I x86 -o util/platform.cmo util/platform.ml # cached
# Target: x86/x86.ml.depends, tags: { extension:ml, file:x86/x86.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules x86/x86.ml > x86/x86.ml.depends # cached
# Target: x86/x86.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:x86/x86.cmo, file:x86/x86.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I x86 -I ll -I util -o x86/x86.cmo x86/x86.ml # cached
# Target: backend.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:backend.cmo, file:backend.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I ll -I util -I x86 -o backend.cmo backend.ml # cached
# Target: frontend.ml.depends, tags: { extension:ml, file:frontend.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules frontend.ml > frontend.ml.depends # cached
# Target: ll/llutil.ml.depends, tags: { extension:ml, file:ll/llutil.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules ll/llutil.ml > ll/llutil.ml.depends # cached
# Target: ll/llutil.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ll/llutil.cmo, file:ll/llutil.ml, implem, ocaml, quiet }
/home/gponti/.opam/4.13.1/bin/ocamlc.opt -c -I /home/gponti/.opam/4.13.1/lib/num -I /home/gponti/.opam/4.13.1/lib/ocaml -I ll -I util -I x86 -o ll/llutil.cmo ll/llutil.ml # cached
# Target: typechecker.ml.depends, tags: { extension:ml, file:typechecker.ml, ocaml, ocamldep, quiet }
/home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules typechecker.ml > typechecker.ml.depends
+ /home/gponti/.opam/4.13.1/bin/ocamldep.opt -modules typechecker.ml > typechecker.ml.depends
File "typechecker.ml", line 258, characters 2-3:
258 |   | Decl vdecl -> (typecheck_vdecl tc vdecl, true)
        ^
Error: Syntax error
Command exited with code 2.
# Compilation unsuccessful.
